# real-estate-scout-agent

./: .gitignore  LICENSE  README.md  browser_automation.py  image_analyzer.py  install.sh  main.py  pyproject.toml
config/: preferences.json
static/: dashboard.html
