[project]
name = "real-estate-agent-v2"
version = "2.0.0"
description = "AI-powered real estate scouting agent with embedded browser and live analysis dashboard"
requires-python = ">=3.11,<3.14"
dependencies = [
    "PySide6>=6.6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
scout = "main:main"
